[gd_scene load_steps=2 format=3 uid="uid://bgeh7l0s02q8g"]

[ext_resource type="Script" path="res://scenes/menu/deck_selector/deck_selector.gd" id="1_owh50"]

[node name="DeckSelector" type="Node"]
script = ExtResource("1_owh50")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Back"

[node name="Deck" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 20
columns = 3

[node name="RuneCountLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.686275, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "8 / 8"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="RunePool" type="GridContainer" parent="MarginContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 20
columns = 4

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
